--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
             </div>
         </div>   
-       
+       <hr style="margin:30px 30px;">
         <div class="last">
             <h2>
                 @2020 ZURI TEAM.
